derive/tests/snapshots/non_unique_multi_column_index/Booking/delete_bookings_by_day_and_room.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Try to delete all `Booking` rows in the `booking` table whose values match the values from the multi-column btree index `day_and_room` on the columns `day` and `room_id`.
    pub fn delete_bookings_by_day_and_room<'a>(
        &'a self,
        day: &'a u32,
        room_id: &'a u64,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let day_and_room = (day, room_id);
        let rows_to_delete: Vec<Booking> = self
            .db()
            .booking()
            .day_and_room()
            .filter(day_and_room)
            .collect();
        if rows_to_delete.is_empty() {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "booking".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entries = std::collections::HashMap::new();
        for row_to_delete in &rows_to_delete {
            deletion_result_entries
                .insert(
                    &row_to_delete.id,
                    crate::spacetimedsl::delete::DeletionResultEntry {
                        table_name: "booking".into(),
                        column_name: "id".into(),
                        strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                        row_value: format!(
                            "{}", BookingId::new(row_to_delete.id.clone())
                        )
                            .into(),
                        child_entries: vec![],
                    },
                );
        }
        let count_of_rows_to_delete: u64 = rows_to_delete
            .len()
            .try_into()
            .unwrap_or(u64::MAX);
        let count_of_deleted_rows = self
            .db()
            .booking()
            .day_and_room()
            .delete(day_and_room);
        if count_of_rows_to_delete.ne(&count_of_deleted_rows) {
            return Err(
                crate::spacetimedsl::error::SpacetimeDSLError::Error(
                    format!(
                        "Delete Many Error: `count_of_rows_to_delete ( {} ) != ( {} ) count_of_deleted_rows`!",
                        & count_of_rows_to_delete, & count_of_deleted_rows
                    ),
                ),
            );
        }
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "booking".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
            entries: deletion_result_entries.into_values().collect_vec(),
            error_from_hook: None,
        });
    }
}
