derive/tests/snapshots/non_unique_multi_column_index/Booking/get_all_bookings.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `booking` table.
    pub fn get_all_bookings<'a>(&'a self) -> impl Iterator<Item = Booking> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().booking().iter()
    }
}
