derive/tests/snapshots/non_unique_multi_column_index/Booking/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct BookingId {
    value: u64,
}
impl Default for BookingId {
    fn default() -> BookingId {
        BookingId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for BookingId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "BookingId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64, BookingId> for BookingId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Booking> for BookingId {
    fn from(value: &Booking) -> Self {
        BookingId {
            value: value.id.clone(),
        }
    }
}
impl From<&Booking> for Option<BookingId> {
    fn from(value: &Booking) -> Option<BookingId> {
        Some(BookingId {
            value: value.id.clone(),
        })
    }
}
impl From<&BookingId> for Option<BookingId> {
    fn from(value: &BookingId) -> Option<BookingId> {
        use crate::spacetimedsl::Wrapper;
        Some(BookingId::new(value.value()))
    }
}
impl From<&BookingId> for BookingId {
    fn from(value: &BookingId) -> Self {
        use crate::spacetimedsl::Wrapper;
        BookingId::new(value.value())
    }
}
impl Booking {
    ///
    pub fn get_id(&self) -> BookingId {
        use crate::spacetimedsl::Wrapper;
        BookingId::new(self.id.clone())
    }
    ///
    pub fn get_day(&self) -> &u32 {
        use crate::spacetimedsl::Wrapper;
        &self.day
    }
    ///
    pub fn get_day_mut(&mut self) -> &mut u32 {
        use crate::spacetimedsl::Wrapper;
        &mut self.day
    }
    ///
    pub fn set_day(&mut self, day: u32) -> u32 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.day, day);
        old_value
    }
    ///
    pub fn get_room_id(&self) -> &u64 {
        use crate::spacetimedsl::Wrapper;
        &self.room_id
    }
    ///
    pub fn get_room_id_mut(&mut self) -> &mut u64 {
        use crate::spacetimedsl::Wrapper;
        &mut self.room_id
    }
    ///
    pub fn set_room_id(&mut self, room_id: u64) -> u64 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.room_id, room_id);
        old_value
    }
}
///
pub struct CreateBooking {
    pub day: u32,
    pub room_id: u64,
}

// Generated DSL methods:
// count_of_all_bookings
// create_booking
// delete_booking_by_id
// delete_bookings_by_day_and_room
// get_all_bookings
// get_booking_by_id
// get_bookings_by_day_and_room
// update_booking_by_id
