derive/tests/snapshots/non_unique_multi_column_index/Booking/update_booking_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Booking` row of the `booking` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_booking_by_id<'a>(
        &'a self,
        booking: Booking,
    ) -> Result<Booking, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut booking = booking;
        let booking = self.db().booking().id().update(booking);
        Ok(booking)
    }
}
